css/style.css
/***************************
    GENERAL
***************************/

body {
  font-family: 'Open Sans', sans-serif;
  max-width: 100%;
  overflow: auto;
}

a
{
  text-decoration: none;
  
}

#wrapper
{
  max-width: 80%;
  margin: 0 auto;
  padding: 0 5%;
  clear: both;
  /* this fixes issues with how firefox interacats with floated elements */
}

img {
  max-width: 100%;
}

h3 {
  margin: 0 0 1em 0;
}

section {
  margin-bottom: 8%;
}


/***************************

    HEADING
***************************/

header {
  float: left;
  margin: 0 0 30px 0;
  padding: 5px 0 0 0;
  width: 100%;
  max-width: 100%;
}

#logo 
{
  text-align: center;
  margin: 0;
}

h1{
  font-family: 'Changa One', sans-serif;
  /* Sans serif is used as a fallback if the link to 'Changa One' dies */
  margin: 15px 0;
  font-size: 1.75em;
  /* ems are a relative unit of measurement based of the letter em.
  1em = current font size. */
  font-weight: normal;
  line-height:0.8em;
  
}

h2{
  font-size: 0.75em;
  margin: -5px 0 0;
  font-weight: normal;
}


/***************************

    NAVIGATION ELEMENTS
***************************/

nav {
  text-align: center;
  padding: 10px 0;
  margin: 20px 0 0;
}
nav ul{
  list-style: none;
  margin:0 10px;
  padding: 0;
 
}

nav li {
  display:inline-block;
}

nav a{
  font-weight: 800;
  padding: 15px 10px;
}

.selected {
  color: #32673f;
}

.notSelected {
  color: #FFFFFF;
}

/***************************

    HEADER
***************************/

.textModifier {
  
  width: 8%;
  padding-right: 1%;
  background-color: #F5F5F5;
  float: right;
  border-radius: 10px 0px 0px 10px;
  opacity: 0.6;
  filter: alpha(opacity=60); /* For IE8 and earlier */
  overflow: auto;
}

.textModifier > p {
  font-family: 'Changa One', sans-serif;
  padding-left: 4px;
  color: #599A68;
}

#text-down {
  display: none;
}


/***************************

    FOOTER
***************************/

footer {
  font-size: 0.75em;
  text-align:center;
  clear:  both;
  padding-top: 50px;
  color: #ccc;
}

.social-icon {
  width: 20px;
  height:20px;
  margin: 0 5px;
}

/***************************

    PAGE PORTFOLIO
***************************/

.gallery {
  margin: 0;
  padding: 0;
  list-style: none;
}

.gallery li {
  float: left;
  width: 80%;
  margin: 2.5%;
  background-color: #f5f5f5;
  color: #bdc3c7;
  
}

.gallery li > p {
  width: 80%;
  margin: 0;
  padding: 5%;
  font-size:0.75em;
  color: #bdc3c7;
}

#personal-statement {
  float: left;
}

/* display and show classes are used for showing and hiding certain content. 
  This helps navigation while maintaing the site's Single Page implementation */

.hidden {
  display: none;
}
  
.show {
  display: block;

}

nav a.show, nav a:hover {
  color: #32673f;
}

#skills > ul > li {
  list-style: none;
  display: inline-block;
  background-color: #f5f5f5;
  margin: 1%;
  padding: 10px;
  border-radius: 20px;
  background-color: #6ab47b;
  color: #FFFFFF;
}

/***************************

    PAGE ABOUT
***************************/
.profile-photo{
  display: block;
  max-width: 200px;
  margin: 0 auto 30px;
  border-radius: 50%;
}


#interests {
  float: left;
  width: 100%;
}

#awards > ul > li {
  list-style: none;
}

/***************************
    CONTACT
***************************/

#contact li {
  list-style: none;
}

/***************************
    COLORS
***************************/

/* site body */
body {
  background-color:#fff;
  color: #999;
}


a {
  color: #6ab47b;
}


/* green header */
header {
  background: #6ab47b;
  border-color: #599a68;
}
/* logo text */
h1, h2 {
  color: #fff;
  
}

/* nav background on mobile*/
nav {
  background:#599a68;
}

/* :visited is a pseudo class that allows you to choose the color of a visited link */
nav a, nav a:visited 
{
  color: #fff ;
}


/***************************
    RESPONSIVE
***************************/  

@media screen and (min-width: 480px) {
  
  /***************************
    TWO COLUMN LAYOUT
  ***************************/

  #primary {
    width: 50%;
    float: left;
  }

  #secondary{
    width:  40%;
    float: right;

  }


  /***************************
    PAGE: PORTFOLIO;
  ***************************/
  .gallery  li {
    width: 45%;
  }

  .gallery li:nth-child(4n) {
    clear: left;
  }

  /***************************
    PAGE: ABOUT
  ***************************/

  .profile-photo {
    float: left;
    margin: 0 5% 80px 0;  
    /* Originaly set at 80px;
    changed to 100px to stop
    text wrapping around the
    image 
    */
  }

  .textModifier {
    width: 5%;
  }
}


@media screen and (min-width: 660px) {
  /***************************
    HEADER
  ***************************/  

  nav {
    background: none;
    float: right;
    font-size: 1.125em;
    margin-right: 5%;
    text-align: right;
    width: 45%;
  }

  #logo {
    float: left;
    margin-left: 5%;
    text-align: left;
    width: 45%;

  }

  h1 {
    font-size: 2.5em;

  }

  h2 {
    font-size: 0.825em;
    margin-bottom: 20px;

  }

  header {
     border-bottom: 5px solid #599a68;
     margin-bottom: 60px;
  }

  .gallery  li {
    width: 28.3333%;
  }

  .gallery li:nth-child(4n) {
    clear: left;
  }


  .textModifier {
    width: 2%;
  }
}

